crates/bridge-system/tests/snapshots/parse_fixtures__seat_vul.snap
---
source: crates/bridge-system/tests/parse_fixtures.rs
expression: "(& file.blocks, & file.lints)"
---
(
    [
        Heading {
            level: 1,
            text: "Seat and vulnerability",
            span: Span {
                file: FileId(
                    0,
                ),
                line: 1,
                col: 0,
                pasted_from: None,
            },
        },
        Seat {
            cond: FirstOrSecond,
            span: Span {
                file: FileId(
                    0,
                ),
                line: 3,
                col: 0,
                pasted_from: None,
            },
        },
        Vul {
            cond: VulCond {
                we: No,
                they: Any,
            },
            span: Span {
                file: FileId(
                    0,
                ),
                line: 5,
                col: 0,
                pasted_from: None,
            },
        },
        BidTable(
            BidTable {
                hidden: true,
                seat: FirstOrSecond,
                vul: VulCond {
                    we: No,
                    they: Any,
                },
                history: [],
                history_desc: None,
                rows: [
                    BmlNode {
                        calls: [
                            CallToken {
                                side: Us,
                                pattern: Exact(
                                    Bid(
                                        1NT,
                                    ),
                                ),
                                raw: "1N",
                                span: Span {
                                    file: FileId(
                                        0,
                                    ),
                                    line: 8,
                                    col: 0,
                                    pasted_from: None,
                                },
                            },
                        ],
                        description: Description {
                            text: "12--14",
                            alert: false,
                            col: 3,
                        },
                        children: [],
                        stop: false,
                        indent: 0,
                        span: Span {
                            file: FileId(
                                0,
                            ),
                            line: 8,
                            col: 0,
                            pasted_from: None,
                        },
                    },
                ],
                stop: false,
                span: Span {
                    file: FileId(
                        0,
                    ),
                    line: 7,
                    col: 0,
                    pasted_from: None,
                },
            },
        ),
        Seat {
            cond: ThirdOrFourth,
            span: Span {
                file: FileId(
                    0,
                ),
                line: 10,
                col: 0,
                pasted_from: None,
            },
        },
        BidTable(
            BidTable {
                hidden: false,
                seat: ThirdOrFourth,
                vul: VulCond {
                    we: No,
                    they: Any,
                },
                history: [],
                history_desc: None,
                rows: [
                    BmlNode {
                        calls: [
                            CallToken {
                                side: Us,
                                pattern: Exact(
                                    Bid(
                                        1NT,
                                    ),
                                ),
                                raw: "1N",
                                span: Span {
                                    file: FileId(
                                        0,
                                    ),
                                    line: 12,
                                    col: 0,
                                    pasted_from: None,
                                },
                            },
                        ],
                        description: Description {
                            text: "14--16",
                            alert: false,
                            col: 3,
                        },
                        children: [],
                        stop: false,
                        indent: 0,
                        span: Span {
                            file: FileId(
                                0,
                            ),
                            line: 12,
                            col: 0,
                            pasted_from: None,
                        },
                    },
                ],
                stop: false,
                span: Span {
                    file: FileId(
                        0,
                    ),
                    line: 12,
                    col: 0,
                    pasted_from: None,
                },
            },
        ),
        Vul {
            cond: VulCond {
                we: Yes,
                they: Any,
            },
            span: Span {
                file: FileId(
                    0,
                ),
                line: 14,
                col: 0,
                pasted_from: None,
            },
        },
        Seat {
            cond: Any,
            span: Span {
                file: FileId(
                    0,
                ),
                line: 16,
                col: 0,
                pasted_from: None,
            },
        },
        BidTable(
            BidTable {
                hidden: false,
                seat: Any,
                vul: VulCond {
                    we: Yes,
                    they: Any,
                },
                history: [],
                history_desc: None,
                rows: [
                    BmlNode {
                        calls: [
                            CallToken {
                                side: Us,
                                pattern: Exact(
                                    Bid(
                                        1NT,
                                    ),
                                ),
                                raw: "1N",
                                span: Span {
                                    file: FileId(
                                        0,
                                    ),
                                    line: 18,
                                    col: 0,
                                    pasted_from: None,
                                },
                            },
                        ],
                        description: Description {
                            text: "14--16",
                            alert: false,
                            col: 3,
                        },
                        children: [],
                        stop: false,
                        indent: 0,
                        span: Span {
                            file: FileId(
                                0,
                            ),
                            line: 18,
                            col: 0,
                            pasted_from: None,
                        },
                    },
                ],
                stop: false,
                span: Span {
                    file: FileId(
                        0,
                    ),
                    line: 18,
                    col: 0,
                    pasted_from: None,
                },
            },
        ),
    ],
    [],
)
